<resources>
    <string name="app_name">Travail Pratique 2_v2</string>
    <string name="entrez_votre_mot_de_passe">Entrez votre mot de passe</string>
    <string name="confirmez_votre_mot_de_passe">Confirmez votre mot de passe</string>
    <string name="entrez_votre_email">Entrez votre email</string>
    <string name="connexion">Connexion</string>
    <string name="register">Inscription</string>
    <string name="vous_tes_connect">Vous êtes connecté!</string>
    <string name="afficher_informations_de_mon_profil">Afficher informations de mon profil</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="mettre_jour_mon_profil">Mettre à jour mon profil</string>
    <string name="entrez_new_email">Entrez nouveau email</string>
    <string name="new_mdp">Entrez nouveau mot de passe</string>
    <string name="new_mdp_confirm">Confirmez votre nouveau mot de passe</string>
    <string name="bienvenue">Bienvenue!</string>
    <string name="entrez_votre_prenom">Entrez votre prénom</string>
    <string name="entrez_votre_nom">Entrez votre nom</string>
    <string name="entrez_votre_newprenom">Entrez votre nouveau prénom</string>
    <string name="entrez_votre_new_nom">Entrez votre nouveau nom</string>
    <string name="entrez_votre_telephone">Entrez votre téléphone</string>
    <string name="entrez_votre_genre">Entrez votre genre</string>
    <string name="afficher_liste">Afficher la liste des utilisateurs</string>
    <string name="mise_ajour">Mise à jour</string>
    <string name="supprimer">Supprimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>